# CompileTimeDifferentiation

./: CMakeLists.txt  binary_operations.cpp  binary_operations.h  common.h  cp_float.cpp  cp_float.h  differentiation.cpp  differentiation.h  library.h  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  tests.cpp
